--- a/index.html
+++ b/index.html
@@ -20,21 +20,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet"></noscript>
     
-    <!-- Performance: Critical inline CSS for fast first paint -->
+    <!-- Performance: Critical inline CSS for App Shell and fast first paint -->
     <style>
       body {
         font-family: 'Tajawal', sans-serif;
         background-image: linear-gradient(to bottom right, #f0f9ff, #e0e7ff);
         margin: 0;
-      }
-      /* Mimic the main layout from App.tsx to prevent layout shifts */
-      #root > div {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        min-height: 100vh;
-        padding: 1rem;
+        color: #374151;
       }
       @keyframes fadeIn {
         from { opacity: 0; transform: translateY(20px); }
@@ -42,6 +34,112 @@
       }
       .animate-fade-in {
         animation: fadeIn 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+      }
+      @keyframes pulse {
+        50% { opacity: .6; }
+      }
+
+      /* --- App Shell Styles --- */
+      .app-shell-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        min-height: 100vh;
+        padding: 1rem;
+        box-sizing: border-box;
+      }
+      .calculator-shell {
+        text-align: center;
+        width: 100%;
+        max-width: 32rem; /* max-w-lg */
+        padding: 1.5rem; /* p-6 */
+        background-color: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        border-radius: 2rem;
+        box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+      }
+      @media (min-width: 640px) {
+        .calculator-shell { padding: 2.5rem; /* sm:p-10 */ }
+      }
+      .shell-header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.75rem; /* gap-3 */
+        margin-bottom: 2rem; /* mb-8 */
+      }
+      .shell-icon-bg {
+        padding: 0.75rem; /* p-3 */
+        background-color: #e0e7ff; /* bg-indigo-100 */
+        border-radius: 1rem; /* rounded-2xl */
+        color: #4f46e5; /* text-indigo-600 */
+      }
+      .shell-icon-bg svg {
+        height: 2rem; width: 2rem; /* h-8 w-8 */
+      }
+      .shell-title {
+        font-size: 1.875rem; line-height: 2.25rem; /* text-3xl */
+        font-weight: 900;
+        margin: 0;
+        color: #312e81;
+      }
+      @media (min-width: 768px) {
+        .shell-title { font-size: 2.25rem; line-height: 2.5rem; /* md:text-4xl */ }
+      }
+      .shell-toggle-bg {
+        background-color: rgba(229, 231, 235, 0.7); /* bg-gray-200/70 */
+        padding: 0.25rem; /* p-1 */
+        border-radius: 9999px; /* rounded-full */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 0.5rem; /* gap-2 */
+        margin-bottom: 2rem; /* mb-8 */
+      }
+      .shell-toggle-button-placeholder {
+        width: 100%;
+        padding: 0.5rem 1.5rem; /* px-6 py-2 */
+        border-radius: 9999px; /* rounded-full */
+        font-weight: 700;
+        background-color: #ffffff;
+        color: #4f46e5;
+        box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+      }
+      .shell-toggle-button-placeholder.inactive {
+        background-color: transparent;
+        color: #4b5563; /* text-gray-600 */
+        box-shadow: none;
+      }
+      .shell-inputs-grid {
+        display: grid;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        gap: 0.75rem; /* gap-3 */
+        margin-bottom: 1rem; /* for error placeholder */
+      }
+      .shell-input-placeholder {
+        width: 100%;
+        height: 3.5rem; /* Match select height */
+        background-color: #f3f4f6; /* bg-gray-100 */
+        border-radius: 0.5rem; /* rounded-lg */
+        border: 2px solid #e5e7eb; /* border-gray-200 */
+        animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+      }
+      .shell-submit-button-placeholder {
+        width: 100%;
+        margin-top: 1rem; /* mt-4 */
+        background-color: #4f46e5; /* bg-indigo-600 */
+        color: white;
+        font-weight: 700;
+        padding: 1rem 2rem; /* py-4 px-8 */
+        border-radius: 0.75rem; /* rounded-xl */
+        font-size: 1.125rem; line-height: 1.75rem; /* text-lg */
+        box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+      }
+      .shell-footer-placeholder {
+        height: 110px; /* Approximate height of the real footer */
       }
     </style>
 <script type="importmap">
@@ -56,7 +154,34 @@
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+        <!-- App Shell: Static placeholder for fast LCP -->
+        <div class="app-shell-container">
+            <main class="calculator-shell">
+                <header class="shell-header">
+                    <div class="shell-icon-bg">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
+                    </div>
+                    <h1 class="shell-title">حاسبة العمر</h1>
+                </header>
+                <div class="shell-toggle-bg">
+                    <div class="shell-toggle-button-placeholder">ميلادي</div>
+                    <div class="shell-toggle-button-placeholder inactive">هجري</div>
+                </div>
+                <div>
+                    <div class="shell-inputs-grid">
+                        <div class="shell-input-placeholder"></div>
+                        <div class="shell-input-placeholder"></div>
+                        <div class="shell-input-placeholder"></div>
+                    </div>
+                    <div class="shell-submit-button-placeholder">
+                        احسب عمري
+                    </div>
+                </div>
+            </main>
+            <footer class="shell-footer-placeholder"></footer>
+        </div>
+    </div>
     <script type="module" src="/index.tsx"></script>
     <!-- Performance: Defer Tailwind CSS to make it non-blocking -->
     <script src="https://cdn.tailwindcss.com" defer></script>
