--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
   }
 }
 </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4197507601541660"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
